--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 </head>
 <body>
     <h1>How to Serve Custom Fonts</h1>
-    <p>In this example, I’m using the <strong>@font-face</strong> CSS rule to serve a custom font called "Creepster." It's a fun, spooky font that feels straight out of a Halloween movie poster. Creepster is bold and has a playful, eerie vibe to it—perfect for standing out in a crowd of boring fonts. By hosting the font on the server and delivering it when requested, users can see this unique font even if they don’t have it installed on their computer.</p>
+    <p>For this lab, I chose the <strong>"Creepster"</strong> font, which is not your typical, everyday font. It feels like something you’d see on a haunted house sign or the cover of a spooky vintage comic book. With its jagged, dripping letters, it brings a sense of eerie fun while still being easy to read—no strange symbols here! It’s bold, quirky, and adds a playful, creepy vibe that will definitely grab attention.</p>
+
+    <p>If you ever need to add a little extra personality to your webpage—say for a Halloween event, mystery story, or just to stand out—Creepster is the font for you. It’s eye-catching, unique, and perfect for breaking away from the plain fonts we see all the time like Arial or Times New Roman. Whether it’s for something spooky or just fun, <strong>Creepster</strong> gets the job done in a way that’s anything but boring.</p>
 
     <footer>
         <p>Last updated: 
