--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
 </head>
 <body>
     <h1>How to Serve Custom Fonts</h1>
-    <p>For this lab, I chose the <strong>"Creepster"</strong> font, which is not your typical, everyday font. It feels like something you’d see on a haunted house sign or the cover of a spooky vintage comic book. With its jagged, dripping letters, it brings a sense of eerie fun while still being easy to read—no strange symbols here! It’s bold, quirky, and adds a playful, creepy vibe that will definitely grab attention.</p>
+    <p>For this lab, I went with the font <strong>"Creepster"</strong>, and trust me, this one’s a bit different from your usual choices. Imagine walking into a haunted house—the sign above the door is written in letters that look like they’re dripping down, almost as if they’re melting right in front of you. That’s <em>Creepster</em> for you. It’s spooky, fun, and full of character!</p>
 
-    <p>If you ever need to add a little extra personality to your webpage—say for a Halloween event, mystery story, or just to stand out—Creepster is the font for you. It’s eye-catching, unique, and perfect for breaking away from the plain fonts we see all the time like Arial or Times New Roman. Whether it’s for something spooky or just fun, <strong>Creepster</strong> gets the job done in a way that’s anything but boring.</p>
+    <p>Now, would you use this font for a business report? Probably not! But for something like a Halloween party flyer or a mystery novel cover? Absolutely! <strong>Creepster</strong> is like the rebellious cousin of the more serious fonts we all know. It’s bold, playful, and definitely attention-grabbing. And the best part? Despite all its spooky vibes, it’s still totally readable—no weird symbols or hard-to-decipher letters here.</p>
+
+    <p>So, whether you're putting together a quirky blog post, an event invitation, or just want to spice up your webpage, <strong>Creepster</strong> has got your back. It’s the font equivalent of putting on a costume and having some fun with your text. It’s bold, a little bit eerie, but doesn’t take itself too seriously. And that’s what makes it perfect for standing out in a sea of boring fonts.</p>
 
     <footer>
         <p>Last updated: 
