--- a/index.html
+++ b/index.html
@@ -26,11 +26,15 @@
 </head>
 <body>
     <h1>How to Serve Custom Fonts</h1>
-    <p>For this lab, I went with the font <strong>"Creepster"</strong>, and trust me, this one’s a bit different from your usual choices. Imagine walking into a haunted house—the sign above the door is written in letters that look like they’re dripping down, almost as if they’re melting right in front of you. That’s <em>Creepster</em> for you. It’s spooky, fun, and full of character!</p>
+    <p>For this lab, I went with the font <strong>"Creepster"</strong>, and trust me, this one’s a bit different from your usual choices. Imagine walking into a haunted house—the sign above the door is written in letters that look like they’re dripping down, almost as if they’re melting right in front of you. That’s <strong>Creepster</strong> for you. It’s spooky, fun, and full of character!</p>
 
     <p>Now, would you use this font for a business report? Probably not! But for something like a Halloween party flyer or a mystery novel cover? Absolutely! <strong>Creepster</strong> is like the rebellious cousin of the more serious fonts we all know. It’s bold, playful, and definitely attention-grabbing. And the best part? Despite all its spooky vibes, it’s still totally readable—no weird symbols or hard-to-decipher letters here.</p>
 
-    <p>So, whether you're putting together a quirky blog post, an event invitation, or just want to spice up your webpage, <strong>Creepster</strong> has got your back. It’s the font equivalent of putting on a costume and having some fun with your text. It’s bold, a little bit eerie, but doesn’t take itself too seriously. And that’s what makes it perfect for standing out in a sea of boring fonts.</p>
+    <p>What really makes <strong>Creepster</strong> stand out is its unique style. Its exaggerated shapes and curves give it a sense of drama, which is perfect for titles and headings. It immediately grabs attention without being over-the-top, making it fun without losing readability. It’s the kind of font that’s made to make an impression—use it in the right context, and people will definitely notice.</p>
+
+    <p>Whether you’re designing something spooky, quirky, or even just whimsical, <strong>Creepster</strong> is the perfect font to bring your creative project to life. It’s like dressing up your words in a costume, but not one that’s too wild—just fun enough to make people smile. It’s a great way to add personality to your page without going overboard.</p>
+
+    <p>And honestly, it’s a bit of a conversation starter, too. When people see <strong>Creepster</strong> on your webpage, they’ll probably ask where you got that cool, unusual font. It’s great for breaking away from the sea of boring, standard fonts we see all the time, and it can really set the mood for a page that’s meant to entertain or stand out.</p>
 
     <footer>
         <p>Last updated: 
